Fix text overlap in new users table

--- a/src/app/modules/user-management/components/unapproved-users-table/unapproved-users-table.component.scss
+++ b/src/app/modules/user-management/components/unapproved-users-table/unapproved-users-table.component.scss
@@ -16,4 +16,10 @@
 
 table {
   width: 100%;
+
+  .truncate {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding-right: 5px;
+  }
 }
